Adjust playlist visibility due to fixed player location

--- a/gmusicprocurator/static/scss/main.scss
+++ b/gmusicprocurator/static/scss/main.scss
@@ -1,3 +1,7 @@
+main {
+  margin-bottom: 50px;
+}
+
 footer {
   background: #fff;
   bottom: 0;
